# RaspberryPicoProjects

./: README.md
1/Task2/: CMakeLists.txt  FlashLEDsSDK.uf2  flashledssdk.S
1/Task3/: FlashLEDsSDK.uf2  flashledssdk.S
1/Task4/: CMakeLists.txt  task4.S  task4.uf2
1/Task_1/: task1.S  task1.uf2
2/Task1/: CMakeLists.txt  task1.S  task1.uf2
2/Task2/: CMakeLists.txt  gpio_control.s  task1.uf2  task2.c
2/Task3/: CMakeLists.txt  sdklink.c  task3.S  task3.uf2
3/task1/task1a/: task2.c
3/task1/task1b/: task1.uf2  task2.c
3/task1/task1c/: task1.uf2  task2.c
3/task2/: CMakeLists.txt  task1.uf2  task2.c
3/task2mukodik/: task1.uf2  task2.c
3/task3/: task1.uf2  task2.c
